plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.9'
    id 'io.spring.dependency-management' version '1.1.7'
}
ext {
    springAiVersion = "1.1.2"
}

group = 'io.codeBuddy'
version = '0.0.1-SNAPSHOT'
description = 'closetBuddy'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    //spring web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //spring jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //eureka-client
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    //feign-client
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    //validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    //testImplementation 'org.springframework.security:spring-security-test'
    //swagger-ui
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    //mysql 드라이버
    runtimeOnly 'com.mysql:mysql-connector-j'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //jjwt
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    //oauth2-client
    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //swagger-ui
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    //spring-batch
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    testImplementation 'org.springframework.batch:spring-batch-test'

    //h2
    testImplementation 'com.h2database:h2'

}
dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:$springAiVersion"
        //spring cloud 버전 관리를 위한 bom추가
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.0.0"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
